# wmtask

./: .gitignore  LICENSE  README.md  pyproject.toml
wmtask/: __init__.py  analysis.py  data_generation.py  dataset.py  dynamics.py  loading.py  model.py  train.py  trajectories.py
wmtask/conf/: config.yaml
wmtask/conf/slurm/: default.yaml
wmtask/conf/wmtask_params/: default.yaml
